[package]
name = "guessing_game_ext_lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# 러스트의 crate (crate는 러스트 코드의 패키지이다.)를 이용해 외부 crate를 쉽게 가져올 수 있다.
# 아래와 같이 외부 크레이트 이름과 버전을 적으면 된다.

[dependencies]
rand = "0.3.14"